Updated colors; added CV.

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -30,6 +30,9 @@ $grey-900: #212529;
 $white-color: #ffffff !default;
 $black-color: #000000 !default;
 
+$tech-red: #CB333B !default;
+$tech-blue: #003087 !default;
+
 // Theme colors
 
 $code-bg-color-light: rgba($purple-color, 0.05);
