--- a/_includes/selected_papers.liquid
+++ b/_includes/selected_papers.liquid
@@ -1,3 +1,9 @@
 <div class="publications">
-  {% bibliography --group_by none --query @*[selected=true]* %}
+
+  <h3>formalized mathematics (Lean / mathlib4)</h3>
+  {% bibliography --group_by none --query @*[selected=true && category=formalization]* %}
+
+  <h3>papers</h3>
+  {% bibliography --group_by none --query @*[selected=true && category=paper]* %}
+
 </div>
